# mcp_on_ecs_sample

./: .gitignore  README.md
inline_agent/: .env.sample  README.md  main.py  main_gui.py  output.json  pyproject.toml
mcp_client/: .env.sample  README.md  main.py  main_gui.py  pyproject.toml  requirements.txt
mcp_server/: Dockerfile  README.md  client.py  pyproject.toml  requirements.txt  weather.py
terraform/: README.md  ecr.tf  ecs.tf  iam.tf  providers.tf  vpc.tf
